[project]
name = "openclaw-memory-demo"
version = "0.1.0"
description = "Mem0 + OpenClaw + FalkorDB demo: persistent graph-structured memory for AI coding assistants"
requires-python = ">=3.10"
dependencies = [
    "mem0-falkordb",
    "mem0ai>=0.1.0",
    "openai>=1.0.0",
    "falkordb>=1.6.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[tool.uv]
package = false
